assets/scss/local.scss
.govuk-main-wrapper {
  min-height: 400px;
  padding-top: 0px;
}

.govuk-phase-banner {
  margin-left: 0px;
  margin-right: 0px;
}


.card {
  flex-basis: 100%;
  flex-grow: 0;
  margin-bottom: 2em;
}

@media screen and (min-width:600px) and (max-width:900px) {
  .card {
      flex-basis: 45.99%;

      // Every card in the first row needs horizontal margin
      &:nth-child(2n-1) {
          margin-right: 3%;
      }

      // Every card in the second row needs horizontal margin
      &:nth-child(2n-2) {
          margin-left: 3%;
      }
  }
}

@media screen and (min-width:900px) {
  .card {
      flex-basis: 31%;

      &:nth-child(3n-1) {
          margin-left: 3%;
          margin-right: 3%;
      }
  }
}

.card {
  border: 1px solid #dee0e2;
  font-size: 16px !important;
}

.card-body {
  background: #f8f8f8;
  padding: 12px;

  *:last-child {
      margin-bottom: 0;
  }
}
/* ==========================================================================
   https://docs.publishing.service.gov.uk/repos/govspeak.html
   ========================================================================== 
*/

.gem-c-contents-list {
  position: relative;
  margin: 0 0 20px 0;
  z-index: 1;
  background: #fff;
  box-shadow: 0 20px 15px -10px #fff
}

.gem-c-contents-list__title {
  color: #0b0c0c;
  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  font-size: .875rem;
  line-height: 1.5;
  margin: 0
}

@media print {
  .gem-c-contents-list__title {
      color: #000
  }
}

@media print {
  .gem-c-contents-list__title {
      font-family: sans-serif
  }
}

@media (min-width: 40.0625em) {
  .gem-c-contents-list__title {
      font-size: 16px;
      font-size: 1rem;
      line-height: 1.5
  }
}

@media print {
  .gem-c-contents-list__title {
      font-size: 14pt;
      line-height: 1.5
  }
}

.gem-c-contents-list__list,
.gem-c-contents-list__nested-list {
  color: #0b0c0c;
  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  font-size: .875rem;
  line-height: 1.1428571429;
  margin: 0;
  padding: 0;
  list-style-type: none
}

@media print {

  .gem-c-contents-list__list,
  .gem-c-contents-list__nested-list {
      color: #000
  }
}

@media print {

  .gem-c-contents-list__list,
  .gem-c-contents-list__nested-list {
      font-family: sans-serif
  }
}

@media (min-width: 40.0625em) {

  .gem-c-contents-list__list,
  .gem-c-contents-list__nested-list {
      font-size: 16px;
      font-size: 1rem;
      line-height: 1.25
  }
}

@media print {

  .gem-c-contents-list__list,
  .gem-c-contents-list__nested-list {
      font-size: 14pt;
      line-height: 1.2
  }
}

.gem-c-contents-list__list-item--parent > .gem-c-contents-list__link {
  font-weight: bold
}

.gem-c-contents-list__link:focus,
.gem-c-contents-list__link:active:focus,
.gem-c-contents-list__link:link:focus,
.gem-c-contents-list__link:visited:focus {
  outline: 3px solid rgba(0, 0, 0, 0);
  color: #0b0c0c;
  background-color: #fd0;
  box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
  text-decoration: none;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
  color: #0b0c0c !important
}

.gem-c-contents-list__list-item {
  padding-top: 10px;
  line-height: 1.3;
  list-style-type: none
}

@media (min-width: 40.0625em) {
  .gem-c-contents-list__list-item {
      padding-top: 7.5px
  }
}

.gem-c-contents-list__list-item--dashed {
  position: relative;
  padding-left: 25px;
  padding-right: 25px
}

.gem-c-contents-list__list-item--dashed span::before {
  content: "—";
  position: absolute;
  left: 0;
  width: 20px;
  overflow: hidden
}

.direction-rtl .gem-c-contents-list__list-item--dashed span::before {
  left: auto;
  right: 0
}

.lte-ie8 .gem-c-contents-list__list-item--dashed .gem-c-contents-list__link {
  display: inline-block;
  vertical-align: top
}

@media print {

  .gem-c-contents-list__list,
  .gem-c-contents-list__nested-list {
      padding-left: 0;
      margin-left: 0
  }

  .gem-c-contents-list__list-item--dashed {
      margin-left: 15px;
      list-style-type: disc
  }

  .gem-c-contents-list__list-item--numbered,
  .gem-c-contents-list__list-item--parent {
      list-style-type: none
  }
}

.gem-c-related-navigation {
  color: #0b0c0c;
  border-top: 2px solid #1d70b8;
  margin-bottom: 60px
}


.govuk-table__header, .govuk-table__cell {
  p {
    margin-bottom: 0 !important;
  }
}

.hidden {
  display: none;
}

